工作流列表页面打开设计页面。

--- a/ExtApp/ExtApp.Web/app/view/workflow/design/designer.html
+++ b/ExtApp/ExtApp.Web/app/view/workflow/design/designer.html
@@ -22,7 +22,7 @@
         mxBasePath = '../../../../packages/mxGraph';
     </script>
     <script src="../../../../packages/mxGraph/js/mxClient.js"></script>
-    <script src="app.js"></script>
+    <script src="designer.js"></script>
     <script>
         mxGraph.prototype.htmlLabels = true;
 
