--- a/ExtApp/ExtApp.Web/app/view/workflow/design/designer.html
+++ b/ExtApp/ExtApp.Web/app/view/workflow/design/designer.html
@@ -45,7 +45,8 @@
 
         window.onbeforeunload = function () { return mxResources.get('changesLost'); };
 
-        mxEditor.prototype.urlPost = '/WorkFlow.ashx';
+        var ID = getQueryString('ID');
+        mxEditor.prototype.urlPost = '/api/Workflow/SaveXml?ID=' + (ID == null ? 0 : ID);
     </script>
 </head>
 <body onload="createEditor('config/workfloweditor.xml');">
